# particle-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh  run.sh
app/: main.cpp  mainSys.cpp
assets/: README.md
assets/ExampleShaderCode/: vertex.glsl
assets/ParticleShaderCode/: fragment.glsl  vertex.glsl
assets/ShaderCode/: fragment.glsl  vertex.glsl
examples/: VBO_VAO_EBO.cpp  cube.cpp  multiple_VBO_VAO.cpp  multiple_attributes.cpp  multiple_textures.cpp  texture.cpp  transformations.cpp  uniform.cpp
include/: Callbacks.h  ParticleSystem.h  Shader.h
resources/: README.md
resources/ShaderCode/: fragment.glsl  shader.fs  shader.vs
resources/examples/: multiple_VBO_VAO.cpp  multiple_frag_shaders.cpp
src/: Callbacks.cpp  ParticleSystem.cpp  Shader.cpp  main.cpp
src/Shader/: Shader.h
src/Shader/ShaderCode/: shader.vs
